force-app/main/default/objects/DM_Repayment_Transaction_Reversal__c/DM_Repayment_Transaction_Reversal__c.object-meta.xml
<CustomObject>
    <label>DM Repayment Transaction Reversal</label>
    <nameField>
        <label>DM Repayment Transaction Reversal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Repayment Transaction Reversal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>