force-app/main/default/objects/DM_Repayment_Transaction_Reversal__c/fields/DM_Adjusted_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Adjusted_Amount__c</fullName>
    <label>DM Adjusted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>