force-app/main/default/objects/DM_Repayment_Transaction_Reversal__c/fields/DM_Adjustment_Txn_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Adjustment_Txn_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>