force-app/main/default/objects/DM_Repayment_Transaction_Reversal__c/fields/DM_Cleared__c.field-meta.xml
<CustomField>
    <fullName>DM_Cleared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Cleared</label>
    <type>Checkbox</type>
</CustomField>