force-app/main/default/objects/DM_Repayment_Transaction_Reversal__c/fields/DM_Custom_Funding_Logic__c.field-meta.xml
<CustomField>
    <fullName>DM_Custom_Funding_Logic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Custom Funding Logic</label>
    <type>Checkbox</type>
</CustomField>