force-app/main/default/objects/DM_Repayment_Transaction_Reversal__c/fields/DM_Loan_Payment_Transaction__c.field-meta.xml
<CustomField>
    <fullName>DM_Loan_Payment_Transaction__c</fullName>
    <label>DM Loan Payment Transaction</label>
    <referenceTo>DM_Loan_Payment_Transaction__c</referenceTo>
    <relationshipLabel>DM Repayment Transaction Reversal</relationshipLabel>
    <relationshipName>DM_Repayment_Transaction_Reversal</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>