force-app/main/default/objects/DM_Repayment_Transaction_Reversal__c/fields/DM_Loan_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>DM_Loan_Snapshot__c</fullName>
    <label>DM Loan Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>