force-app/main/default/objects/DM_Repayment_Transaction_Reversal__c/fields/DM_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>DM_Reason_Code__c</fullName>
    <label>DM Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NSF</fullName>
            </value>
            <value>
                <fullName>Human Error</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>