force-app/main/default/objects/DM_Repayment_Transaction_Reversal__c/fields/DM_Receipt_ID__c.field-meta.xml
<CustomField>
    <fullName>DM_Receipt_ID__c</fullName>
    <displayFormat>DMRATID-{0000}</displayFormat>
    <label>DM Receipt ID</label>
    <type>AutoNumber</type>
</CustomField>