force-app/main/default/objects/DM_Repayment_Transaction_Reversal__c/fields/DM_Reference__c.field-meta.xml
<CustomField>
    <fullName>DM_Reference__c</fullName>
    <label>DM Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>